fixed styling on mobile and desk for all tools

--- a/public/css/tools/image-compressor.css
+++ b/public/css/tools/image-compressor.css
@@ -58,7 +58,7 @@
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        overflow-y: auto;
+        overflow-y: hidden;
         flex-wrap: nowrap;
         justify-content: space-evenly;
         padding-left: 10px;
