--- a/public/css/tools/image-resizer.css
+++ b/public/css/tools/image-resizer.css
@@ -66,10 +66,12 @@
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        overflow-y: scroll;
+        overflow-y: hidden;
+        overflow-x: scroll;
         flex-wrap: nowrap;
         justify-content: space-evenly;
         padding-left: 10px;
+        height: auto;
     }
 
     body .image-previews > div{
@@ -286,6 +288,8 @@
 .image-previews{
     display: flex;
     width: 100%;
+    height: 600px;
+    overflow-y: scroll;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 20px;
