--- a/public/css/tools/image-rotator.css
+++ b/public/css/tools/image-rotator.css
@@ -73,10 +73,12 @@
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        overflow-y: scroll;
+        overflow-y: hidden;
+        overflow-x: scroll;
         flex-wrap: nowrap;
         justify-content: space-evenly;
         padding-left: 10px;
+        height: auto;;
     }
 
     body .image-previews > div{
@@ -248,6 +250,8 @@
     width: 100%;
     flex-wrap: wrap;
     justify-content: center;
+    height: 600px;
+    overflow-y: scroll;
 }
 
 .image-previews > div {
@@ -265,7 +269,7 @@
 .image-previews div img{
     height: 150px;
     width: 150px;
-    object-fit: cover;
+    object-fit: contain;
     box-shadow: 0px 0px 10px gray;
 
 }
